# Claude-cod-top-2026

./: .gitattributes  .gitignore  AGENTS.md  AI_REVIEW_GUIDE.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE_CODE_ADVANCED_GUIDE_2026.md  CLAUDE_CODE_FULL_GUIDE_2026.md  CODE_OF_CONDUCT.md  COMPARISON_TABLE.md  CONTRIBUTING.md  GEOSCAN_COMPARISON.md  PAPER_ALIGNMENT.md  PRODUCT_CONSTITUTION.md  README.en.md  README.md  REPO_COMPARISON.md  SECURITY.md  install.ps1  install.sh  marketplace.json  pyproject.toml  repo_audit_manifest.json  requirements.txt  skill-manager.sh  update-claude.sh
.claude/: AUDIT_REPORT_2026-05-25.md  EXAMPLES.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: example-agent.md
.claude/checkpoints/: 2026-04-12_plugin-manifest.md  2026-04-12_second-brain-3.md  2026-04-13_v3.6.3-ci-green.md  2026-04-15_auto-vault-migration.md  2026-04-19_wave1-wave2-obsidian.md  2026-05-03_post-telemetry-merge.md  2026-05-06_distribution-sprint-step2-done.md  2026-05-06_pr106-attention-decay-merged.md  2026-06-02_fl-ai-pregates.md  2026-07-21_agent-fixes-vs-upstream-divergence.md  (+3 more)
.claude/memory/: GLOSSARY.md  (+4 more)
.codex/: AGENTS.md  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
agents/: CLAUDE.md  _README.md  architect.md  builder.md  debugger.md  devops.md  doc-writer.md  explorer.md  fe-mentor.md  navigator.md  reviewer.md  scope-guard.md  sec-auditor.md  security-guard.md  skeptic-auditor.md  skeptic.md  skill-scout.md  skill-suggester.md  teacher.md  tester.md  verifier.md
architecture/: capability.schema.json  verdict-record.schema.json  workflow.schema.json
assets/: demo-dashboard.html  preview_design.html
claude-md/: CLAUDE.md  DISPATCHER.md  RELEASES.md
commands/: evolve-solution.md  release-scout.md  revive-project.md
docs/: AI_CLAIM_HYGIENE.md  CODEX_AUDIT_RESULTS.md  CODEX_AUDIT_SPEC.md  CURSOR-HARNESS.md  GITHUB_SHOWCASE_AUDIT.md  GLOBAL_VS_PROJECT_OVERLAY.md  LOOP_CODING.md  LOOP_HYGIENE.md  SESSION_REPORT_2026-06.md  STACK_MATURITY.md  anti-hallucination.md  anti-patterns.md  architecture.md  diagrams.html  estimand-to-estimator-map.md  evidence-judge.md  evidence-policy.md  false-pass-rate.md  hooks-guide.md  living-skills.md  mcp-profiles.md  memory-architecture.md  methodology.md  oracle-adequacy-gate.md  positioning.md  proactive-discovery-navigator.md  proof-pack.md  research-sources.yaml  skill-disambiguation.md  skill-maturity-criteria.md  skills-guide.md  stop-condition-gate.md  strategy-router.md  training-experience.md  troubleshooting.md  variant-tournament.md
examples/: session-code-review.md  session-debugging.md  session-tdd.md
experiments/: INDEX.md
hooks/: CLAUDE.md  ace_reflector.py  activeContext_hygiene.py  agent_context_filter.py  agent_lifecycle.py  agent_tool_scope_guard.py  artifact_schema_validator.py  async_wrapper.py  auto_capture.py  boyko_protocol_guard.py  checkpoint_guard.py  claim_entropy_tracker.py  cogniml_client.py  commit_test_gate.py  config_audit.py  direnv_loader.py  doc_bridge.py  doc_registry.py  drift_guard.py  elicitation_guard.py  env_reload.py  estimand_guard.py  evidence_guard.py  experiment_insight.py  expert_registry.py  file_auto_parser.py  first_run_check.py  gitnexus_reindex.py  goal_budget_guard.py  goal_stub_detector.py  hook_observability.py  hook_state.py  hooks.json  hypothesis_router.py  inbox_review.py  input_guard.py  instructions_audit.py  iteration_guard.py  keyword_router.py  knowledge_librarian.py  (+64 more)
mcp-profiles/: core.json  deploy.json  science.json  switch-profile.ps1  switch-profile.sh
memory/: activeContext.md  decisions.md
null_results/: 20260715-sde-cc-fabricated-historical-corpus.md  20260716-llm-judge-response-guard.md  20260716-regex-composition-response-guard.md  INDEX.md
parked/: INDEX.md
rules/: audit-verification-gate.md  coding-style.md  context-loading.md  doubt-driven-development.md  estimand-ops.md  falsification-ladder.md  integrity.md  memory-protocol.md  mentor-protocol.md  perelman-audit.md  permissions.md  security.md  skeptic-triggers.md  testing.md
scripts/: add_triggers.py  agent_eval.py  check_architecture.py  check_global_hooks.py  check_global_skills.py  config_audit_scan.py  consistency_audit.py  deploy_p1_hooks.py  doctor.py  ev_score.py  false_pass_rate.py  fix_lint.py  git_add_hooks.py  hook_audit.py  hook_metrics.py  inbox_review.py  lint_all_p1.py  lint_new_hooks.py  lint_p1_hooks.py  metrics_collector.py  otel_exporter.py  populate_vault.py  pre_commit_checklist.py  redact.py  resolve_route.py  setup_release_scout_schedule.ps1  setup_release_scout_schedule.sh  stage_p1.py  sync_config.py  sync_doc_counts.py  sync_global_hooks.py  sync_plugin_hooks.py  sync_readme_from_ci.py  test_redact.py  validate_experiment.py  validate_permissions.py  weekly_review.py
skills/: mcp-installer.md  python-geodata.md  registry.yaml
templates/: evidence_report.yaml  falsification_contract.yaml  intent_card.yaml  null_result_entry.yaml  oracle_audit.yaml  stop_gate_report.yaml  verification_plan.yaml
tests/: conftest.py  test_ace_reflector.py  test_activecontext_hygiene.py  test_agent_context_filter.py  test_agent_tool_scope_guard.py  test_all.sh  test_analysis_hooks.py  test_architecture.py  test_artifact_schema_validator.py  test_attention_decay_tiering.py  test_audit_hooks.py  test_auto_capture.py  test_backport_hooks.py  test_boyko_protocol_guard.py  test_checkpoint_guard.py  test_circuit_breaker.py  test_circuit_breaker_lock_race.py  test_circuit_breaker_post.py  test_claim_entropy_tracker.py  test_claims_corpus.py  test_cogniml_client.py  test_commit_test_gate.py  test_consistency_audit.py  test_coverage_boost.py  test_coverage_gap.py  test_coverage_statusline.py  test_doc_registry.py  test_drift_guard.py  test_env_hooks.py  test_estimand_guard.py  test_evidence_guard.py  test_experiment_insight.py  test_expert_registry.py  test_expert_registry_sandbox_refusal.py  test_false_pass_rate.py  test_fence_untrusted_content.py  test_file_lock.py  test_first_run_check.py  test_gitnexus_reindex.py  test_goal_budget_guard.py  (+68 more)
(+557 files in other folders)
