[project]
name = "claude-code-config"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "DTZ"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "DTZ"]  # DTZ pre-existed rule addition; date arithmetic in tests is intentional
"scripts/test_redact.py" = ["E501"]
"hooks/mentor_nudge.py" = ["E501"]  # interview question strings intentionally verbose
"hooks/input_guard.py" = ["E501"]  # regex patterns with unicode escapes are legitimately long
".claude/hooks/example-hook.py" = ["E501"]  # docstring examples contain long JSON/shell commands
# WHY: DTZ violations pre-existed the DTZ rule addition; tracked for fix in next sprint
"hooks/knowledge_librarian.py" = ["DTZ"]
"hooks/learning_tracker.py" = ["DTZ"]
"hooks/pattern_extractor.py" = ["DTZ"]
"hooks/post_commit_memory.py" = ["DTZ"]
"hooks/pre_compact.py" = ["DTZ"]
"skills/extensions/notebooklm/scripts/notebook_manager.py" = ["DTZ"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["hooks", "scripts"]

[tool.coverage.run]
omit = [
    # WHY: standalone CLI scripts require live env (Obsidian vault, git, metrics DB).
    # They have no pure unit-testable functions — verified via integration/smoke tests.
    "scripts/weekly_review.py",
    "scripts/inbox_review.py",
    "scripts/populate_vault.py",
    "scripts/doctor.py",
    "scripts/metrics_collector.py",
    "scripts/config_audit_scan.py",
    "scripts/agent_eval.py",
]
