[project]
name = "claude-code-config"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
# WHY: skills/*/scripts/ contains vendored payloads imported from external repos
# (agent-research-skills, wshobson/agents, etc.) — not our harness code.
# Applying our lint standard to vendored code creates churn on every batch import.
# hooks/, scripts/, tests/ remain fully linted.
exclude = [
    "skills/core/*/scripts/",
    "skills/extensions/*/scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "DTZ"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "DTZ"]  # DTZ pre-existed rule addition; date arithmetic in tests is intentional
"scripts/test_redact.py" = ["E501"]
"hooks/mentor_nudge.py" = ["E501"]  # interview question strings intentionally verbose
"hooks/input_guard.py" = ["E501"]  # regex patterns with unicode escapes are legitimately long
".claude/hooks/example-hook.py" = ["E501"]  # docstring examples contain long JSON/shell commands
"hooks/project_classifier.py" = ["E501"]  # methodology descriptions + keyword catalogs read better unsplit
# WHY: DTZ violations pre-existed the DTZ rule addition; tracked for fix in next sprint
"hooks/knowledge_librarian.py" = ["DTZ"]
"hooks/learning_tracker.py" = ["DTZ"]
"hooks/pattern_extractor.py" = ["DTZ"]
"hooks/post_commit_memory.py" = ["DTZ"]
"hooks/pre_compact.py" = ["DTZ"]
"skills/extensions/notebooklm/scripts/notebook_manager.py" = ["DTZ"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["hooks", "scripts"]

[tool.coverage.run]
omit = [
    # WHY: standalone CLI scripts require live env (Obsidian vault, git, metrics DB).
    # They have no pure unit-testable functions — verified via integration/smoke tests.
    "scripts/weekly_review.py",
    "scripts/inbox_review.py",
    "scripts/populate_vault.py",
    "scripts/doctor.py",
    "scripts/metrics_collector.py",
    "scripts/config_audit_scan.py",
    "scripts/agent_eval.py",
    # WHY: additional standalone CLI tools — no unit-testable functions.
    # Verified via integration / smoke tests (scripts/test_*.sh, windows-install CI job).
    "scripts/ev_score.py",
    "scripts/sync_config.py",
    "scripts/sync_global_hooks.py",
    "scripts/fix_lint.py",
    "scripts/git_add_hooks.py",
    "scripts/hook_audit.py",
    "scripts/lint_all_p1.py",
    "scripts/lint_new_hooks.py",
    "scripts/lint_p1_hooks.py",
    "scripts/stage_p1.py",
    # WHY: requires a running OpenTelemetry endpoint — no unit-testable logic.
    "scripts/otel_exporter.py",
    # WHY: hooks below depend on the full ~/.claude global environment
    # (Obsidian vault, MarkItDown binary, Python sandbox, Claude agent SDK)
    # that is not available on CI runners.  Their test files already use
    # pytest.skip() or would need the same guard.  Covered by manual + smoke tests.
    "hooks/inbox_review.py",
    "hooks/expert_registry.py",
    "hooks/file_auto_parser.py",
    "hooks/doc_bridge.py",
    "hooks/markitdown_auto_convert.py",
    "hooks/pre_vault_write.py",
    "hooks/artifact_schema_validator.py",
    "hooks/agent_context_filter.py",
    # WHY: standalone architecture-coherence CLIs. Their LOGIC (schema/gate functions) is
    # exercised by tests/test_architecture.py (incl. 9 mutation tests); the argparse/CLI
    # wrappers are not unit-testable and would drift the coverage %. Same treatment as the
    # other standalone CLI tools above -- omit ≠ untested (the mutation tests still run).
    "scripts/check_architecture.py",
    "scripts/resolve_route.py",
]
